--- a/src/styles/components/device-frame.scss
+++ b/src/styles/components/device-frame.scss
@@ -22,3 +22,15 @@
     }
   }
 }
+
+@include media-breakpoint-down(xs) {
+  .device-frame {
+    width: 90%;
+  }
+}
+
+@media (max-width: 320px) {
+  .device-frame {
+    width: 75%;
+  }
+}
